fix: - Compose version issue - Added toasts when copying emotes - Better performances - Moved configs to AppData - update gitignore